# Carla-Autoware-Bridge

./: README.md  package.xml  setup.cfg  setup.py
carla_autoware_bridge/: aw_bridge.py  carla_autoware_bridge.py
carla_autoware_bridge/converter/: converter.py  steering_status.py  velocity_report.py
config/: objects.json
doc/: autoware-changes.md  autoware_installation.md
docker/: Dockerfile  build_docker.sh  docker.repos
launch/: carla_autoware_ego_vehicle.launch.py  carla_aw_bridge.launch.py
utils/: generate_traffic.py
