<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>carla_autoware_bridge</name>
  <version>0.1.0</version>
  <description>Convert and transfer messages between carla_ros_bridge and autoware universe</description>
  <maintainer email="gemb.kaljavesi@tum.de">Gemb Kaljavesi</maintainer>
  <maintainer email="tobias.kerbl@tum.de">Tobias Kerbl</maintainer>
  <maintainer email="kirill.mitkovskii@gmail.com">Robotics010</maintainer>
  <license>LGPLv3</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>ackermann_msgs</exec_depend>

  <depend>carla_ackermann_control</depend>
  <depend>carla_manual_control</depend>
  <depend>carla_spawn_objects</depend>

  <depend>autoware_auto_control_msgs</depend>
  <depend>autoware_auto_vehicle_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
